--- a/src/output.css
+++ b/src/output.css
@@ -570,76 +570,36 @@ video {
   top: 0px;
 }
 
-.top-\[\] {
-  top: ;
-}
-
-.top-\[-10\%\] {
-  top: -10%;
-}
-
-.top-\[10\%\] {
-  top: 10%;
-}
-
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.top-\[30\%\] {
-  top: 30%;
-}
-
-.top-\[20\%\] {
-  top: 20%;
-}
-
-.top-\[40\%\] {
-  top: 40%;
-}
-
-.top-\[100\%\] {
-  top: 100%;
-}
-
-.top-\[105\%\] {
-  top: 105%;
-}
-
-.top-\[110\%\] {
-  top: 110%;
-}
-
-.top-\[90\%\] {
-  top: 90%;
-}
-
 .top-\[95\%\] {
   top: 95%;
 }
 
-.col-span-6 {
-  grid-column: span 6 / span 6;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.col-span-4 {
-  grid-column: span 4 / span 4;
+.-bottom-1 {
+  bottom: -0.25rem;
 }
 
-.col-span-8 {
-  grid-column: span 8 / span 8;
+.-left-3 {
+  left: -0.75rem;
 }
 
-.col-span-5 {
-  grid-column: span 5 / span 5;
+.-bottom-4 {
+  bottom: -1rem;
 }
 
-.col-span-7 {
-  grid-column: span 7 / span 7;
+.-left-4 {
+  left: -1rem;
 }
 
 .col-span-12 {
   grid-column: span 12 / span 12;
+}
+
+.col-span-6 {
+  grid-column: span 6 / span 6;
 }
 
 .mx-auto {
@@ -647,31 +607,43 @@ video {
   margin-right: auto;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.my-\[4vw\] {
-  margin-top: 4vw;
-  margin-bottom: 4vw;
-}
-
 .my-\[4vh\] {
   margin-top: 4vh;
   margin-bottom: 4vh;
 }
 
-.mb-3 {
+.my-3 {
+  margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .mb-8 {
   margin-bottom: 2rem;
 }
 
+.mt-\[2vw\] {
+  margin-top: 2vw;
+}
+
+.mt-\[6vw\] {
+  margin-top: 6vw;
+}
+
+.mt-\[8vw\] {
+  margin-top: 8vw;
+}
+
 .block {
   display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -694,6 +666,10 @@ video {
   height: 100vh;
 }
 
+.h-\[2px\] {
+  height: 2px;
+}
+
 .h-\[40vh\] {
   height: 40vh;
 }
@@ -706,100 +682,77 @@ video {
   height: ;
 }
 
-.h-\[90\%\] {
-  height: 90%;
+.h-16 {
+  height: 4rem;
 }
 
-.h-\[80\] {
-  height: 80;
+.h-28 {
+  height: 7rem;
 }
 
-.h-\[80\%\] {
-  height: 80%;
+.h-\[90vh\] {
+  height: 90vh;
 }
 
-.h-\[1px\] {
-  height: 1px;
-}
-
-.h-\[4px\] {
-  height: 4px;
-}
-
-.h-\[2px\] {
-  height: 2px;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.min-h-\[90\%\] {
-  min-height: 90%;
-}
-
-.min-h-\[90vh\] {
-  min-height: 90vh;
-}
-
-.min-h-\[100vh\] {
-  min-height: 100vh;
+.h-\[9d0vh\] {
+  height: 9d0vh;
 }
 
 .min-h-\[100\%\] {
   min-height: 100%;
 }
 
-.min-h-\[80\%\] {
-  min-height: 80%;
-}
-
-.min-h-\[80vh\] {
-  min-height: 80vh;
-}
-
 .w-\[100vw\] {
   width: 100vw;
+}
+
+.w-\[24vw\] {
+  width: 24vw;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-8 {
-  width: 2rem;
-}
-
 .w-\[\] {
   width: ;
 }
 
-.w-\[3vw\] {
-  width: 3vw;
+.w-\[100\%\] {
+  width: 100%;
 }
 
-.w-\[8vw\] {
-  width: 8vw;
+.w-\[0\%\] {
+  width: 0%;
 }
 
-.w-\[12vw\] {
-  width: 12vw;
+.w-\[90\%\] {
+  width: 90%;
 }
 
-.w-\[4vw\] {
-  width: 4vw;
+.w-\[95\%\] {
+  width: 95%;
 }
 
-.w-\[6vw\] {
-  width: 6vw;
+.w-\[100\] {
+  width: 100;
 }
 
-.w-\[14vw\] {
-  width: 14vw;
+.w-\[30\%\] {
+  width: 30%;
 }
 
-.w-\[24vw\] {
-  width: 24vw;
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.translate-x-\[150\%\] {
+  --tw-translate-x: 150%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-x-\[40vw\] {
@@ -807,39 +760,14 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-\[-50\%\] {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+@keyframes move {
+  50% {
+    transform: translateY(-1rem);
+  }
 }
 
-.translate-x-\[50\%\] {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[60\%\] {
-  --tw-translate-x: 60%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[80\%\] {
-  --tw-translate-x: 80%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[100\%\] {
-  --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[130\%\] {
-  --tw-translate-x: 130%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[150\%\] {
-  --tw-translate-x: 150%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.animate-movingY {
+  animation: move 2s linear infinite;
 }
 
 .list-none {
@@ -852,14 +780,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -894,44 +814,24 @@ video {
   gap: 2rem;
 }
 
-.gap-\[\] {
-  gap: ;
-}
-
-.gap-\[10\] {
-  gap: 10;
-}
-
-.gap-\[10\%\] {
-  gap: 10%;
-}
-
-.gap-\[8\] {
-  gap: 8;
-}
-
-.gap-\[3vw\] {
-  gap: 3vw;
-}
-
-.gap-\[4vw\] {
-  gap: 4vw;
-}
-
-.gap-\[5vw\] {
-  gap: 5vw;
-}
-
 .gap-\[2vw\] {
   gap: 2vw;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .bg-\[\#020E63\] {
@@ -943,24 +843,9 @@ video {
   background-color: #020d6378;
 }
 
-.bg-red-200 {
+.bg-yellow-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
-.bg-green-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
 .bg-yellow-500 {
@@ -968,18 +853,34 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-red-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-400 {
+.bg-green-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
-.bg-\[\] {
-  background-color: ;
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -991,66 +892,52 @@ video {
   padding: 0.5rem;
 }
 
-.py-\[4vw\] {
-  padding-top: 4vw;
-  padding-bottom: 4vw;
-}
-
 .py-\[9vw\] {
   padding-top: 9vw;
   padding-bottom: 9vw;
 }
 
-.pl-4 {
-  padding-left: 1rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pl-2 {
   padding-left: 0.5rem;
 }
 
-.pl-\[10vw\] {
-  padding-left: 10vw;
-}
-
-.pr-\[\] {
-  padding-right: ;
-}
-
-.pr-\[10vw\] {
-  padding-right: 10vw;
-}
-
-.pt-11 {
-  padding-top: 2.75rem;
-}
-
-.pt-32 {
-  padding-top: 8rem;
-}
-
-.pt-28 {
-  padding-top: 7rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
+.pt-16 {
+  padding-top: 4rem;
 }
 
 .pt-10 {
   padding-top: 2.5rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
+.pr-20 {
+  padding-right: 5rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
@@ -1067,6 +954,15 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-\[10vw\] {
+  font-size: 10vw;
+}
+
 .text-\[6vw\] {
   font-size: 6vw;
 }
@@ -1076,96 +972,38 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[5vw\] {
-  font-size: 5vw;
-}
-
-.text-\[4vw\] {
-  font-size: 4vw;
-}
-
-.text-\[3vw\] {
-  font-size: 3vw;
-}
-
-.text-\[2\.5vw\] {
-  font-size: 2.5vw;
-}
-
-.text-\[2\.7vw\] {
-  font-size: 2.7vw;
-}
-
-.text-\[2\.6vw\] {
-  font-size: 2.6vw;
-}
-
-.text-\[3\.5vw\] {
-  font-size: 3.5vw;
-}
-
-.text-\[4\.7vw\] {
-  font-size: 4.7vw;
-}
-
-.text-\[4\.6vw\] {
-  font-size: 4.6vw;
-}
-
-.text-\[20vw\] {
-  font-size: 20vw;
-}
-
-.text-\[10vw\] {
-  font-size: 10vw;
-}
-
-.font-semibold {
-  font-weight: 600;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
 
-.leading-4 {
-  line-height: 1rem;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
-}
-
-.leading-8 {
-  line-height: 2rem;
-}
-
-.leading-\[1vw\] {
-  line-height: 1vw;
-}
-
-.leading-\[4vw\] {
-  line-height: 4vw;
-}
-
-.leading-\[3\.8vw\] {
-  line-height: 3.8vw;
-}
-
-.leading-\[5vw\] {
-  line-height: 5vw;
-}
-
-.leading-\[6vw\] {
-  line-height: 6vw;
-}
-
 .leading-\[8vw\] {
   line-height: 8vw;
+}
+
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1173,29 +1011,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-
-.text-zinc-300 {
-  --tw-text-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-text-opacity));
-}
-
 .text-yellow-300 {
   --tw-text-opacity: 1;
   color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
-.text-yellow-900 {
+.text-yellow-400 {
   --tw-text-opacity: 1;
-  color: rgb(113 63 18 / var(--tw-text-opacity));
-}
-
-.text-yellow-600 {
-  --tw-text-opacity: 1;
-  color: rgb(202 138 4 / var(--tw-text-opacity));
+  color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
 .text-yellow-500 {
@@ -1203,12 +1026,24 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
+.text-zinc-300 {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
 }
 
-.underline {
-  text-decoration-line: underline;
+.text-zinc-800 {
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+.text-zinc-600 {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
+}
+
+.text-yellow-200 {
+  --tw-text-opacity: 1;
+  color: rgb(254 240 138 / var(--tw-text-opacity));
 }
 
 .shadow-xl {
@@ -1221,6 +1056,10 @@ video {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.\[sm\:flex\] {
+  sm: flex;
 }
 
 .hover\:text-white:hover {
@@ -1238,6 +1077,10 @@ video {
     top: 40%;
   }
 
+  .sm\:top-\[44\%\] {
+    top: 44%;
+  }
+
   .sm\:col-span-5 {
     grid-column: span 5 / span 5;
   }
@@ -1246,33 +1089,25 @@ video {
     grid-column: span 7 / span 7;
   }
 
-  .sm\:my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
-  .sm\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-  }
-
-  .sm\:my-2 {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
-
-  .sm\:my-1 {
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-  }
-
   .sm\:my-\[-1vw\] {
     margin-top: -1vw;
     margin-bottom: -1vw;
   }
 
-  .sm\:block {
-    display: block;
+  .sm\:mb-\[2vw\] {
+    margin-bottom: 2vw;
+  }
+
+  .sm\:mb-\[3vw\] {
+    margin-bottom: 3vw;
+  }
+
+  .sm\:mt-\[18vw\] {
+    margin-top: 18vw;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
   }
 
   .sm\:flex {
@@ -1283,24 +1118,40 @@ video {
     display: none;
   }
 
-  .sm\:h-\[6\%\] {
-    height: 6%;
-  }
-
   .sm\:h-\[1px\] {
     height: 1px;
   }
 
-  .sm\:h-\[90vh\] {
-    height: 90vh;
+  .sm\:h-\[6\%\] {
+    height: 6%;
   }
 
   .sm\:h-\[80\%\] {
     height: 80%;
   }
 
-  .sm\:w-\[80\%\] {
-    width: 80%;
+  .sm\:h-\[90vh\] {
+    height: 90vh;
+  }
+
+  .sm\:h-\[\] {
+    height: ;
+  }
+
+  .sm\:h-\[40vh\] {
+    height: 40vh;
+  }
+
+  .sm\:h-\[20vh\] {
+    height: 20vh;
+  }
+
+  .sm\:h-\[10vh\] {
+    height: 10vh;
+  }
+
+  .sm\:h-\[24vh\] {
+    height: 24vh;
   }
 
   .sm\:w-\[100\%\] {
@@ -1311,16 +1162,37 @@ video {
     width: 12vw;
   }
 
+  .sm\:w-\[30vw\] {
+    width: 30vw;
+  }
+
+  .sm\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .sm\:translate-x-\[0\%\] {
+    --tw-translate-x: 0%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
   .sm\:items-start {
     align-items: flex-start;
   }
 
-  .sm\:items-center {
-    align-items: center;
+  .sm\:gap-4 {
+    gap: 1rem;
   }
 
   .sm\:overflow-hidden {
     overflow: hidden;
+  }
+
+  .sm\:overflow-x-hidden {
+    overflow-x: hidden;
   }
 
   .sm\:py-\[0vw\] {
@@ -1340,8 +1212,8 @@ video {
     text-align: left;
   }
 
-  .sm\:text-right {
-    text-align: right;
+  .sm\:text-start {
+    text-align: start;
   }
 
   .sm\:text-\[4vw\] {
@@ -1350,11 +1222,5 @@ video {
 
   .sm\:leading-\[3\.8vw\] {
     line-height: 3.8vw;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:block {
-    display: block;
   }
 }
